# ClaudeSignal

./: .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
scripts/: dev.sh  install-claude-wrapper.sh
src/: attach.rs  claude_runner.rs  cli.rs  db.rs  error.rs  lib.rs  log_buffer.rs  main.rs  network.rs  routes.rs  server.rs  simulator.rs  status.rs  status_detector.rs  status_line.rs  status_store.rs  usage.rs  usage_history.rs  websocket.rs
tests/: server_routes.rs  status_behavior.rs  usage_history_parsing.rs  websocket_behavior.rs
web/: app.js  index.html  styles.css  usage-styles.css  usage.html  usage.js
